--- a/VRChat/91/935391.html
+++ b/VRChat/91/935391.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gGqHYAgQMn9kAacHpMoUDTuUtVqzcwlsp06E3X3VMVc="></script>
+    "2YXICv+GdjjWgP4zFFZ+WOqef0HtzTQ6AQrgK2IxtlM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" ３Dモデル - 狐尻尾 -　全５カラー","description":"■内容 尻尾全５カラー（赤,青,茶,白,黒）\n・サンプル画像\n・Readme（使用例以外の方法での利用を考える場合必ず読んで下さい。）\n・unitypackage（Unity5.6.3以前の環境での動作は保証できかねます。）\n・fbx（アバター、キャラクターのアクセサリを想定）\n・texture\n・導入説明.txt\u0026説明画像\n\n\n●etc-data\n・ポリゴン数:94\n\n★使用例\n尻尾、髪の毛、腰に付けるファーアクセサリー、ボーンで曲げて角、尻尾として作ってはいますが、アイディア次第で用途は様々です！\n\n\nMMD等に移管出来る方はそちらでもご利用下さい♪\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。\n\n","url":"https://booth.pm/ja/items/935391","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/935391/e31ecd92-7e94-4cc0-a6ac-c307cd8faac0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gGqHYAgQMn9kAacHpMoUDTuUtVqzcwlsp06E3X3VMVc="></script>
+    nonce="2YXICv+GdjjWgP4zFFZ+WOqef0HtzTQ6AQrgK2IxtlM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/935391/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               259
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/935391/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               259
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
