--- a/VRChat/13/935413.html
+++ b/VRChat/13/935413.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CVkCLDgRC6eGaWom/UT2B9L63sypHtBwN1o/Eje4huM="></script>
+    "cT6t9aFBZ6Xt1lnZLYgGBmzBXsgwcA5AotOv3zMe8mQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"生体武器「スペアリブ（SP-α-R2）」【VRChat向け】","description":"--------------------------------------------------\n\n◆スペアリブ（SP-α-R2）\n\nUnity（主にVRChat）で使える生体武器「スペアリブ（SP-α-R2）」です。\nご自身のアバターに持たせる、敵キャラに持たせるなどしてお使い下さい。\n\n--------------------------------------------------\n\n◆「SP-α-R2.unitypackage」の中身と情報\n\n□SP-α-R2\n┣□Materials\n┃┣〇BaceColor.png\t：ベーステクスチャ（旧）\n┃┣〇BaceColor2.png\t：ベーステクスチャ\n┃┣〇Material.mat\t：マテリアル（ノーマルシェーダー）\n┃┣〇Metallic.png\t：メタリックテクスチャ（旧）\n┃┣〇Metallic2.png\t：メタリックテクスチャ\n┃┣〇NormalMap.png\t：ノーマルマップテクスチャ（旧）\n┃┗〇NormalMap2.png\t：ノーマルマップテクスチャ\n┣〇SP-α-R2.fbx\t：モデルデータ\n┗〇SP-α-R2.prefab\t：設定済プレハブ\n\nポリゴン数\t：△2756\nBlendShapes\t：剣ニョイーン\n\n--------------------------------------------------\n\n◆注意事項\n\nこの武器の伸び縮みはBlendShapesで行っています。\n伸ばしたい場合は剣ニョイーンを0に、縮めたい場合は100にして下さい。\n旧版のテクスチャを同梱してあります。お好みでどうぞ。\n\n面倒な利用規約なんてありません。フリー素材です。\n良心に従ってご自由にお使い下さい。\n\n--------------------------------------------------\n\n◆二条阜（ツイッター：https://twitter.com/nizyou2）","url":"https://booth.pm/ja/items/935413","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d587fec6-51e9-4d9d-afa4-8f9825678eca/i/935413/4cba12f5-63a5-483f-981d-9529d58e3b0b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CVkCLDgRC6eGaWom/UT2B9L63sypHtBwN1o/Eje4huM="></script>
+    nonce="cT6t9aFBZ6Xt1lnZLYgGBmzBXsgwcA5AotOv3zMe8mQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/935413/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/935413/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               65
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
