--- a/VRChat/57/934957.html
+++ b/VRChat/57/934957.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7HlOld/OcDzDK9sNqcvFqYD2tX76repFyW728h6QDCo="></script>
+    "da4FzeUC66+2IwjRXl4eKIWDCcCFSKSXS2ho5PmXQOY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】オリジナル3Dモデル　NEXIE","description":"◆◇VRアバター向けオリジナル3Dモデル『NEXIE(ネキシィ)ver6.0』紹介文◇◆\n\n※最新の環境でファイルが正常に動作するか保証できません。\nSdk3.0、PBには対応していません。設定済みプレハブも入っていません。その他諸々のセッティングをご自身で出来る方のみご購入ください。\nNFTの発行を禁止します。\n\n■このモデル『NEXIE(ネキシィ)』はVRchatでの使用を想定して制作されたVRアバター向けの3Dモデルです。\n\n\n\n　営利目的での使用は可能です。\n\n　3Dモデルのファイルはfbx,blend,unitypackage形式、その他いくつかの資料（テクスチャや説明書など）をご用意しています。\n\n\n■改変可能です。\n\n　ヒューマノイドボーンのモデルです。\n\n  フルトラッキングでの正常な動作確認済みです。\n\n　リップシンクはVRchatに必要な15種類のリップシンクをご用意しております。\n\n\n■禁止事項\n\n 『NEXIE』とその付属のモデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。\n\n\n■ダウンロードされましたら、まずreadmeに目を通してください。\n\n\n\n\nバージョンアップ情報＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\n\n2.0　：ダイナミックボーンなどの揺れものに対応\n　　　 ハンマー追加\n2.1　：ウェイトの塗り残し修正\n3.0　：ポリゴン削減　\n　　　 袖修正\n　　　 飾り多めモデル追加\n3.0.1：肘修正\n4.0  ：首輪修正\n　　　 腕時計追加\n       袖修正\n4.0.3：耳尻尾の動き追加\n5.0　：髪の毛のテクスチャ改良\n　　   ブーツ変更\n6.0　：口内追加\n　　　 表情モーフ追加\u0026作り直し\n　　 　装備を取り外し式に変更\n　　 　不要だとみなした装備品撤去\n      マテリアル数テクスチャ数削減","url":"https://booth.pm/ja/items/934957","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b741927d-7967-46e1-905d-78b9949c6df9/i/934957/11df70e8-7ad4-4797-b7cc-f6fb400a6e29_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7HlOld/OcDzDK9sNqcvFqYD2tX76repFyW728h6QDCo="></script>
+    nonce="da4FzeUC66+2IwjRXl4eKIWDCcCFSKSXS2ho5PmXQOY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/934957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               318
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/934957/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               318
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
