--- a/VRChat/89/933789.html
+++ b/VRChat/89/933789.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pgW3NlyEpdjbZVj4ap5LNFGI7h3HDRLKW+mvJCBdUE4="></script>
+    "NVN94oV7hYRKGQ6/aqrNkuSc8hYtEecEgmBR+XnSwfE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]Dボーン式ライトセーバーキット","description":"☆[VRChat向け]Dボーン式ライトセーバーキット☆\n\n制作　oga\n twitter @oga_pleconia\n\nダイナミックボーンを使用してブラーを出すタイプのビーム剣です\n※有償アセット「ダイナミックボーン」を予めご用意ください\n（無い場合も動かない形での実装は可能）\n\nグリップと刀身を分離したデータも用意しており、\nお好きなモデルにビーム刃を装着できます\n\n\n・データ内容\nfbx2018形式（unity5.6へのインポート確認済）\nmaya ascii形式（2018.2）\nテクスチャtga(サンプルグリップに使用のキューブマップのみ)\n使用方法解説メモ\n\n・仕様\nサンプルグリップのポリゴン数792\n刀身部分のポリゴン数624\nジョイント43本\n\n\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）","url":"https://booth.pm/ja/items/933789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/933789/b658a6a0-f675-413a-bed5-460a7fa7e88e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pgW3NlyEpdjbZVj4ap5LNFGI7h3HDRLKW+mvJCBdUE4="></script>
+    nonce="NVN94oV7hYRKGQ6/aqrNkuSc8hYtEecEgmBR+XnSwfE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/933789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/933789/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
