--- a/VRChat/35/932335.html
+++ b/VRChat/35/932335.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Olv+wQVsrjZ7B7jIJ92hUFp5RPhnxbhzfCphdW2mEOA="></script>
+    "LJ6mmkKZEYXvVAp8nVsTnK3HtBBuFHHB6YBDuV5+gcM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鉱石ナイフパック","description":"\u003c概要\u003e\nファンタジー系の鉱石ナイフパックです。\nアバターのアクセサリ、ワールドの小物などにお使いください。\n刃、鉱石、持ち手、全て分離してあるのでお好きな組み合わせでお使いください。\n\n†刃の形状　5種類 (二枚目左から)\n・3(202ポリゴン)\n・2(170ポリゴン)\n・1(120ポリゴン)\n・4(146ポリゴン)\n・5(264ポリゴン)\n\n†鉱石の種類(二枚目左から）\n・abyss(黒紺）\n・gaia(黄土)\n・sky(紫)\n・sea(碧)\n・sun(赤)\n\n†持ち手の形状　5種類（二枚目左から）\n・3(264ポリゴン)\n・2(188ポリゴン)\n・1(188ポリゴン)\n・4(124ポリゴン)\n・5(96ポリゴン)\n\n\u003c中身\u003e\n・刃のfbxデータ　\n・持ち手のfbxデータ\n・テクスチャデータ　\n・unitypackage(.prefab)\n・read me\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・再配布、販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する","url":"https://booth.pm/ja/items/932335","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/932335/2fcab1f4-60b1-426a-b147-c1acaa8ab43b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Olv+wQVsrjZ7B7jIJ92hUFp5RPhnxbhzfCphdW2mEOA="></script>
+    nonce="LJ6mmkKZEYXvVAp8nVsTnK3HtBBuFHHB6YBDuV5+gcM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/932335/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/932335/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
