--- a/VRChat/98/933098.html
+++ b/VRChat/98/933098.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZfNnA6iK448E7ilS3j6o2TgnrQ3hOwb0wkGz38sHf7k="></script>
+    "H7/ShkIlo4WqtFMvYpSs+ngwOWwEDsYwjIPPa9bm6y4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おひげ(VRChat用)","description":"VRChatで使えるおひげです。\nボーン入ってるので揺らせます。\n△ポリ156","url":"https://booth.pm/ja/items/933098","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10d948b8-0b72-4560-ab78-7df7442c2fa1/i/933098/4aed1519-9b4b-4d55-9742-b12a1ed20890_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZfNnA6iK448E7ilS3j6o2TgnrQ3hOwb0wkGz38sHf7k="></script>
+    nonce="H7/ShkIlo4WqtFMvYpSs+ngwOWwEDsYwjIPPa9bm6y4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,10 +156,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/933098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              384
+                              385
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/933098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              384
+                              385
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
