--- a/VRChat/01/932501.html
+++ b/VRChat/01/932501.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HF7i+I9vK9aiKAKDB6EmNIgD+aewcbDmXT7iE3npIaI="></script>
+    "6GaX+DvPzZqYeU+m5cuJoSksfnUAuKs4KUC0BFf+aGE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[感謝を込めて] モーゼルC96 (Mauser Schnellfeuer Long ver) ","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/4bcbe8469b19438d996fc50b1170b6e3\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数4175 (銃) \n2K(2048×2048)テクスチャー,三角面数1202 (弾丸\u0026クリップ) \nUnity,VRChat用にフルスクラッチで作ったモーゼルC96です。 \n\n\n\u003c説明\u003e\n「.........................................................!!!」 \n※トリガー,スライド,マガジン口,木製ストックはすべて別パーツなので可動です。 \n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。","url":"https://booth.pm/ja/items/932501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/932501/0b4b65ca-4418-4c86-9b3d-d2918e8452fe_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HF7i+I9vK9aiKAKDB6EmNIgD+aewcbDmXT7iE3npIaI="></script>
+    nonce="6GaX+DvPzZqYeU+m5cuJoSksfnUAuKs4KUC0BFf+aGE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/932501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               570
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/932501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               570
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
